--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -107,7 +107,7 @@
             <li class="has-sub" ng-class="{active:$state.includes('app.facturacion')}">
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
-                    <i class="fa fa-bank"></i>
+                    <i class="fa fa-euro"></i>
                     <span>Facturacion</span>
                 </a>
                 <ul class="sub-menu">
@@ -127,8 +127,8 @@
             <li class="has-sub" ng-class="{active:$state.includes('app.mantenedores')}">
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
-                    <i class="fa fa-exchange"></i>
-                    <span>B2B</span>
+                    <i class="fa fa-clipboard"></i>
+                    <span>Mantenedores</span>
                 </a>
                 <ul class="sub-menu">
                     <li class="has-sub" ng-class="{active:$state.includes('app.mantenedores.proveedores')}">
@@ -150,7 +150,7 @@
             <li class="has-sub" ng-class="{active:$state.includes('app.b2b')}">
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
-                    <i class="fa fa-exchange"></i>
+                    <i class="fa fa-users"></i>
                     <span>B2B</span>
                 </a>
                 <ul class="sub-menu">
