--- a/views/B2B/Transportista/b2b_aceptar.html
+++ b/views/B2B/Transportista/b2b_aceptar.html
@@ -3,11 +3,11 @@
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
         <li><a href="javascript:;">B2B</a></li>
-        <li class="active">Revisa Viaje</li>
+        <li class="active">Aceptar Solicitud</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Revisa Viaje <small>Gestión de B2B</small></h1>
+    <h1 class="page-header">Aceptar Solicitud <small>Gestión de B2B</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -29,9 +29,9 @@
                 <div class="panel-body">
                     <form class="form-horizontal">
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Numero de Viaje</label>
+                            <label class="col-md-3 control-label">Numero de Solicitud</label>
                             <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="200021" />
+                                <input type="text" class="form-control" placeholder="10021" />
                             </div>
 
                         </div>
@@ -92,75 +92,68 @@
                     <table id="data-table" class="table table-striped table-bordered">
                         <thead>
                         <tr>
-                            <th>N° Despacho</th>
-                            <th>Proveedor</th>
-                            <th>Tipo de Camión</th>
+                            <th>N° Solicitud</th>
+                            <th>Tipo de Viaje</th>
                             <th>Origen</th>
                             <th>Destino</th>
+                            <th>Fecha Presentación</th>
                             <th>Estado</th>
-                            <th>Tarifa</th>
-                            <th>Seleccionar</th>
+                            <th>Aceptar/Rechazar</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">214222</a></td>.
-                            <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
+                            <td><a href="../../carga_todos.html">14222</a></td>.
+                            <td>TRONCAL</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
-                            <td>CERRADO</td>
-                            <td>360,500</td>
+                            <td>12/12/16 14:00</td>
+                            <td>PUBLICADO</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">214222</a></td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
+                            <td><a href="../../carga_todos.html">14222</a></td>
+                            <td>TRONCAL</td>
                             <td>00 CD-SANTIAGO</td>
-                            <td>17 TI-TALCA</td>
-                            <td>CERRADO</td>
-                            <td>490,500</td>
+                            <td>41 TALCA</td>
+                            <td>12/12/16 15:00</td>
+                            <td>PUBLICADO</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">214223</a></td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
+                            <td><a href="../../carga_todos.html">14223</a></td>
+                            <td>TRONCAL</td>
                             <td>00 CD-SANTIAGO</td>
-                            <td>15 ARICA</td>
-                            <td>CERRADO</td>
-                            <td>550,500</td>
+                            <td>14 ANTOFAGASTA</td>
+                            <td>12/12/16 15:00</td>
+                            <td>RECHAZADO</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">214223</a></td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
-                            <td>00 CD-SANTIAGO</td>
-                            <td>14 PUERTO MONTT</td>
-                            <td>CERRADO</td>
-                            <td>680,000</td>
+                            <td><a href="../../carga_todos.html">14223</a></td>
+                            <td>UM</td>
+                            <td>00 CT - ANTOFAGASTA</td>
+                            <td>99 CLIENTE</td>
+                            <td>12/12/16 15:00</td>
+                            <td>PUBLICADO</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">214224</a></td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
+                            <td><a href="../../carga_todos.html">14224</a></td>
+                            <td>DDC</td>
                             <td>00 CD-SANTIAGO</td>
-                            <td>36 ANTOFAGASTA</td>
-                            <td>CERRADO</td>
-                            <td>705,000</td>
+                            <td>955 ZONA 9</td>
+                            <td>05/01/17 10:00</td>
+                            <td>RECHAZADO</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">214225</a></td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
+                            <td><a href="../../carga_todos.html">14225</a></td>
+                            <td>TRONCAL</td>
                             <td>00 CD-SANTIAGO</td>
-                            <td>19 LA FLORIDA</td>
-                            <td>CERRADO</td>
-                            <td>90,500</td>
+                            <td>12 MALL PLAZA NORTE</td>
+                            <td>05/01/17 09:00</td>
+                            <td>PUBLICADO</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
                         </tbody>
@@ -170,12 +163,11 @@
                             Acciones :
                         </p>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-5">
                         <p>
-                            <button class="btn btn-success " >Agregar</button>
-                            <button class="btn btn-danger " >Eliminar</button>
-                            <button class="btn btn-inverse" >Objetar</button>
-                            <button class="btn btn-info" >Cancelar</button>
+                            <button class="btn btn-success " >Aceptar Solicitud</button>
+                            <button class="btn btn-danger " >Rechazar Solicitud</button>
+                            <button class="btn btn-info " >Cancelar</button>
                         </p>
                     </div>
                 </div>
