PANTALLA RESPONDE OBJECION

--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -164,7 +164,7 @@
                         <a href="javascript:;"><b class="caret pull-right"></b> Transportista</a>
                         <ul class="sub-menu">
                             <li ui-sref-active="active"><a ui-sref="app.b2b.transportista.aceptar">Solicitudes Publicadas</a></li>
-                            <li ui-sref-active="active"><a ui-sref="app.b2b.transportista.despacho">Despachos</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.b2b.transportista.despacho">Revisa Viaje</a></li>
                             <li ui-sref-active="active"><a ui-sref="app.b2b.transportista.oc">Ordenes de Facturación</a></li>
                             <li ui-sref-active="active"><a ui-sref="app.b2b.transportista.factura">Facturas</a></li>
                         </ul>
