PANTALLA RESPONDE OBJECION

--- a/views/Facturacion/Objeciones/responder.html
+++ b/views/Facturacion/Objeciones/responder.html
@@ -1,4 +1,4 @@
-<div ng-controller="tablaManifiestoDefaultController">
+<div ng-controller="B2B_Fact_Obje_Resp_Controller">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
@@ -172,8 +172,8 @@
                     </div>
                     <div class="col-md-6">
                         <p>
-                            <button class="btn btn-success " >Aceptar</button>
-                            <button class="btn btn-danger " >Rechazar</button>
+                            <button class="btn btn-success " ng-click="PRO_ACEP_OBJ()" >Aceptar</button>
+                            <button class="btn btn-danger " ng-click="PRO_RECH_OBJ()">Rechazar</button>
                             <button class="btn btn-info" >Cancelar</button>
                         </p>
                     </div>
