pantalla ingresa Sellos

--- a/views/sello_crear.html
+++ b/views/sello_crear.html
@@ -28,9 +28,13 @@
                 <div class="panel-body">
                     <form class="form-horizontal">
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Patente</label>
-                            <div class="col-md-3">
+                            <label class="col-md-1 control-label">Patente</label>
+                            <div class="col-md-1">
                                 <input type="text" class="form-control" placeholder="BBBB-01" ng-model="monet_id"  />
+                            </div>
+                            <label class="col-md-1 control-label">N° Viaje</label>
+                            <div class="col-md-1">
+                                <input type="text" class="form-control" placeholder="200109" ng-model="monet_id"  />
                             </div>
                             <label class="col-md-2 control-label">Numero Sello</label>
                             <div class="col-md-3">
