pantalla ingresa Sellos

--- a/views/sello_crear.html
+++ b/views/sello_crear.html
@@ -7,7 +7,7 @@
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Ingreso de Sellos <small>Gestión del Despachos</small></h1>
+    <h1 class="page-header">Ingreso de Sellos <small>Gestión de Carga</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -81,7 +81,7 @@
                     <table id="data-table2" class="table table-striped table-bordered">
                         <thead>
                         <tr>
-                            <th>Numero Despacho</th>
+                            <th>Numero Viaje</th>
                             <th>Patente</th>
                             <th>Sello</th>
                         </tr>
