pantalla validaciones de salida

--- a/views/despacho_validar.html
+++ b/views/despacho_validar.html
@@ -3,11 +3,11 @@
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
         <li><a href="javascript:;">Carga</a></li>
-        <li class="active">Tabla Manifiestos</li>
+        <li class="active">Gestion</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Vereficaciones de Salida <small>Gestión de Despachos</small></h1>
+    <h1 class="page-header">Validaciones de Salida <small>Gestión de Carga</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -33,6 +33,10 @@
                             <div class="col-md-2">
                                 <input type="text" class="form-control" placeholder="BBBB-01" />
                             </div>
+                            <label class="col-md-1 control-label">Numero de Viaje</label>
+                            <div class="col-md-1">
+                                <input type="text" class="form-control" placeholder="200147" />
+                            </div>
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Acciones:</label>
@@ -53,7 +57,7 @@
                             <th>Rev/Tec</th>
                             <th>Per/Cir</th>
                             <th>Cer/Gses</th>
-                            <th>Peso Despacho</th>
+                            <th>Peso</th>
                             <th>Volumen</th>
                             <th>Estado</th>
                         </tr>
@@ -100,8 +104,6 @@
                             <tr>
                                 <th>Rut</th>
                                 <th>Nombre</th>
-                                <th>Sexo</th>
-                                <th>Fecha Nacimiento</th>
                                 <th>Proveedor</th>
                                 <th>Telefono</th>
                                 <th>Licencia</th>
@@ -109,10 +111,8 @@
                             </thead>
                             <tbody>
                             <tr class="odd gradeX">
-                                <td>14558557</td>
+                                <td>14558557-5</td>
                                 <td>Juan Carlos Matamala Duran</td>
-                                <td>Masculino</td>
-                                <td>22/05/1941</td>
                                 <td>TRASPORTES DEL PACIFICO</td>
                                 <td>+56 2 1125 2251</td>
                                 <td>A5</td>
