--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -29,6 +29,18 @@
                     
                 </ul>
             </li>
+            <li class="has-sub" ng-class="{active:$state.includes('app.consulta')}">
+                <a href="javascript:;">
+                    <b class="caret pull-right"></b>
+                    <i class="fa fa-tasks"></i>
+                    <span>Consulta</span>
+                </a>
+                <ul class="sub-menu">
+
+                    <li ui-sref-active="active"><a ui-sref="app.consulta.parciales">Despachos Parciales</a></li>
+                </ul>
+            </li>
+
 
             <li class="has-sub" ng-class="{active:$state.includes('app.solicitud')}">
                 <a href="javascript:;">
