--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -37,7 +37,7 @@
                 </a>
                 <ul class="sub-menu">
                     <li ui-sref-active="active"><a ui-sref="app.consulta.parciales">Despachos Parciales</a></li>
-                    <li class="has-sub" ng-class="{active:$state.includes('app.consulta.viajes')}">
+                    <li class="has-sub" ng-class="{active:$state.includes('app.consulta.viaje')}">
                         <a href="javascript:;"><b class="caret pull-right"></b>Viajes</a>
                         <ul class="sub-menu">
                             <li ui-sref-active="active"><a ui-sref="app.consulta.viaje.troncal">Troncal</a></li>
