--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -44,12 +44,12 @@
                             <li ui-sref-active="active"><a ui-sref="app.consulta.viaje.umilla">Ul. Milla/Direc.Cnt</a></li>
                         </ul>
                     </li>
-                    <li class="has-sub" ng-class="{active:$state.includes('app.consulta.supervisor')}">
-                        <a href="javascript:;"><b class="caret pull-right"></b>Supervisor</a>
+                    <li class="has-sub" ng-class="{active:$state.includes('app.consulta.tarifa')}">
+                        <a href="javascript:;"><b class="caret pull-right"></b>Tarifa</a>
                         <ul class="sub-menu">
-                            <li ui-sref-active="active"><a ui-sref="app.consulta.supervisor.anular">Anular Despacho</a></li>
-                            <li ui-sref-active="active"><a ui-sref="app.consulta.supervisor.troncal">Troncal</a></li>
-                            <li ui-sref-active="active"><a ui-sref="app.consulta.supervisor.umilla">Ul. Milla/Direc.Cnt</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.consulta.tarifa.troncal">Troncal</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.consulta.tarifa.umilla">Ul. Milla/Direc.Cnt</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.consulta.tarifa.factura">Facturación UM/DDC</a></li>
                         </ul>
                     </li>
                 </ul>
