menu consulta reporteria

--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -54,7 +54,7 @@
                             <li ui-sref-active="active"><a ui-sref="app.consulta.tarifa.factura">Facturación UM/DDC</a></li>
                         </ul>
                     </li>
-                    <li class="has-sub" ng-class="{active:$state.includes('app.consulta.tarifa')}">
+                    <li class="has-sub" ng-class="{active:$state.includes('app.consulta.reporteria')}">
                         <a href="javascript:;"><b class="caret pull-right"></b>Reportería</a>
                         <ul class="sub-menu">
                             <li ui-sref-active="active"><a ui-sref="app.consulta.reporteria.mercaderia">Mercaderia Transportada</a></li>
