--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -102,6 +102,20 @@
                             <li ui-sref-active="active"><a ui-sref="app.facturacion.consulta.umilla">Facturación Ult. Milla</a></li>
                         </ul>
                     </li>
+                    <li class="has-sub" ng-class="{active:$state.includes('app.facturacion.modifica')}">
+                        <a href="javascript:;"><b class="caret pull-right"></b>Consulta Facturación</a>
+                        <ul class="sub-menu">
+                            <li ui-sref-active="active"><a ui-sref="app.facturacion.modifica.viaje">Modificar por Viaje</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.facturacion.modifica.ns">Modificar por NS</a></li>
+                            <li ui-sref-active="active"><a ui-sref="app.facturacion.modifica.boleta">Modificar por Boleta</a></li>
+                        </ul>
+                    </li>
+                    <li class="has-sub" ng-class="{active:$state.includes('app.facturacion.interna')}">
+                        <a href="javascript:;"><b class="caret pull-right"></b> Solicitud Interna</a>
+                        <ul class="sub-menu">
+                            <li ui-sref-active="active"><a ui-sref="app.facturacion.interna.crear">Crear S. Interna</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
 
