--- a/views/Gestion/Solicitud/programada.html
+++ b/views/Gestion/Solicitud/programada.html
@@ -1,13 +1,14 @@
-<div ng-controller="expressDespachoController">
+<div ng-controller="30201_Controller">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a ui-sref="app.dashboard">Home</a></li>
-        <li><a href="javascript:;">Despacho</a></li>
-        <li class="active">Solicitud Programada</li>
+        <li><a href="javascript:;">Gestión</a></li>
+        <li><a href="javascript:;">Solicitud</a></li>
+        <li class="active">30201 - Programada</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Despacho Solicitud Programada <small>Formulario de Ingreso</small></h1>
+    <h1 class="page-header">Solicitud Programada<small>Gestión de Viajes</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -23,7 +24,7 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Formulario Nueva Solcitud Programada</h4>
+                    <h4 class="panel-title">Formulario Crear Solcitud Programada</h4>
                 </div>
                 <div class="panel-body">
                     <form class="form-horizontal">
