--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -118,6 +118,22 @@
                     </li>
                 </ul>
             </li>
+            <li class="has-sub" ng-class="{active:$state.includes('app.gestion')}">
+                <a href="javascript:;">
+                    <b class="caret pull-right"></b>
+                    <i class="fa fa-truck"></i>
+                    <span>Gestión Transportes</span>
+                </a>
+                <ul class="sub-menu">
+                    <li class="has-sub" ng-class="{active:$state.includes('app.gestion.solicitud')}">
+                        <a href="javascript:;"><b class="caret pull-right"></b> Solicitudes</a>
+                        <ul class="sub-menu">
+                            <li ui-sref-active="active"><a ui-sref="app.gestion.solicitud.programada">Solicitud Programada</a></li>
+                        </ul>
+                    </li>
+
+                </ul>
+            </li>
 
 
 
