--- a/views/Facturacion/Modifica/viaje.html
+++ b/views/Facturacion/Modifica/viaje.html
@@ -1,4 +1,4 @@
-<div ng-controller="B2B_Fact_Obje_Resp_Controller">
+<div ng-controller="20501_Controller">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
