--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -103,7 +103,7 @@
                         </ul>
                     </li>
                     <li class="has-sub" ng-class="{active:$state.includes('app.facturacion.modifica')}">
-                        <a href="javascript:;"><b class="caret pull-right"></b>Consulta Facturación</a>
+                        <a href="javascript:;"><b class="caret pull-right"></b>Modificar Tarifa</a>
                         <ul class="sub-menu">
                             <li ui-sref-active="active"><a ui-sref="app.facturacion.modifica.viaje">Modificar por Viaje</a></li>
                             <li ui-sref-active="active"><a ui-sref="app.facturacion.modifica.ns">Modificar por NS</a></li>
