--- a/views/Facturacion/Modifica/viaje.html
+++ b/views/Facturacion/Modifica/viaje.html
@@ -157,7 +157,7 @@
                             <td>TRANSPORTES DEL PACIFICO</td>
                             <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
-                            <td>36 ANTOFAGASTA</td>
+                            <td>36 ANTOFAGASTA</td>app
                             <td>ANULADO</td>
                             <td>705,000</td>
                             <td><input type="checkbox" value="es"> </td>
@@ -182,7 +182,6 @@
                     <div class="col-md-6">
                         <p>
                             <button class="btn btn-success " ng-click="PRO_ACEP_OBJ()" >Aceptar</button>
-                            <button class="btn btn-danger " ng-click="PRO_RECH_OBJ()">Rechazar</button>
                             <button class="btn btn-info" >Cancelar</button>
                         </p>
                     </div>
