--- a/views/Facturacion/Consulta/troncal.html
+++ b/views/Facturacion/Consulta/troncal.html
@@ -140,6 +140,7 @@
                             <td>CERRADO</td>
                             <td>360,500</td>
                             <td>09/02/17 12:15:12 </td>
+                            <td>FACTURADO</td>
                             <td>1002</td>
                             <td>CREADA</td>
                         </tr>
@@ -153,6 +154,7 @@
                             <td>CERRADO</td>
                             <td>490,500</td>
                             <td>09/02/17 12:15:12 </td>
+                            <td>FACTURADO</td>
                             <td>1002</td>
                             <td>CREADA</td>
                         </tr>
@@ -166,6 +168,7 @@
                             <td>CERRADO</td>
                             <td>550,500</td>
                             <td>09/02/17 12:15:12 </td>
+                            <td>FACTURADO</td>
                             <td>1002</td>
                             <td>CREADA</td>
                         </tr>
@@ -179,6 +182,7 @@
                             <td>CERRADO</td>
                             <td>680,000</td>
                             <td>12/02/17 02:15:12 </td>
+                            <td>FACTURADO</td>
                             <td>1003</td>
                             <td>CREADA</td>
                         </tr>
@@ -192,6 +196,7 @@
                             <td>CERRADO</td>
                             <td>705,000</td>
                             <td>12/02/17 02:15:12 </td>
+                            <td>FACTURADO</td>
                             <td>1003</td>
                             <td>CREADA</td>
                         </tr>
@@ -205,6 +210,7 @@
                             <td>OBJETADO</td>
                             <td>90,500</td>
                             <td>12/02/17 02:15:12 </td>
+                            <td>FACTURADO</td>
                             <td>1003</td>
                             <td>CREADA</td>
                         </tr>
