--- a/views/Facturacion/Aprobacion/troncal.html
+++ b/views/Facturacion/Aprobacion/troncal.html
@@ -1,1 +1,83 @@
-facturacion detalle troncal
+<div ng-controller="B2B_Fact_Obje_Resp_Controller">
+    <!-- begin breadcrumb -->
+    <ol class="breadcrumb pull-right">
+        <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">Facturación</a></li>
+        <li><a href="javascript:;">Aprueba OF</a></li>
+        <li class="active">20102 - Detalle Troncal</li>
+    </ol>
+    <!-- end breadcrumb -->
+    <!-- begin page-header -->
+    <h1 class="page-header">Detalle Troncal <small>Gestión de Facturación</small></h1>
+    <!-- end page-header -->
+
+    <!-- begin row -->
+    <div class="row">
+
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Solicitudes Registradas </h4>
+                </div>
+
+                <div class="panel-body">
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>N° Despacho</th>
+                            <th>Tipo</th>
+                            <th>Proveedor</th>
+                            <th>Tipo de Camión</th>
+                            <th>Origen</th>
+                            <th>Destino</th>
+                            <th>Estado Via.</th>
+                            <th>Tarifa</th>
+                            <th>Fecha Fact</th>
+                            <th>Estado Fac.</th>
+                            <th>N° Orn Fact</th>
+                            <th>Estado Orn Fact</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">214222</a></td>
+                            <td>TRONCAL</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>CM40</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>45 CONCEPCIÓN</td>
+                            <td>CERRADO</td>
+                            <td>360,500</td>
+                            <td>09/02/17 12:15:12 </td>
+                            <td>FACTURADO</td>
+                            <td>1002</td>
+                            <td>CREADA</td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+                    <div class="col-md-1">
+                        <p>
+                            Acciones :
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <button class="btn btn-info" >Cancelar</button>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+    </div>
+    <!-- end row -->
+</div>
