--- a/views/Facturacion/Aprobacion/troncal.html
+++ b/views/Facturacion/Aprobacion/troncal.html
@@ -13,7 +13,6 @@
 
     <!-- begin row -->
     <div class="row">
-
         <div class="col-md-12">
             <!-- begin panel -->
             <div class="panel panel-inverse">
@@ -24,7 +23,47 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Solicitudes Registradas </h4>
+                    <h4 class="panel-title">Tabla Despacho </h4>
+                </div>
+
+                <div class="panel-body">
+                    <table class="table table-striped table-bordered">
+                        <tr><td>Numero de Viaje</td><td>14222</td><td>Tipo de Viaje</td><td>TRT</td></tr>
+                        <tr><td>Origen</td><td>00 CD Santiago</td><td>Destino</td><td>41 TALCA</td></tr>
+                        <tr><td>Fecha</td><td>12/12/16 15:25:49</td><td>Estado</td><td>CREADA</td></tr>
+                        <tr><td>Patente</td><td>FKCY-89</td><td>Tipo de Vehiculo</td><td>CM40</td></tr>
+                        <tr><td>Solicitud</td><td>10041</td><td>Conductor</td><td>09258528-5</td></tr>
+                        <tr><td>Nombre</td><td>Roberto Cienfuegos D.</td><td>Transportista</td><td>Transportes del Pacifico</td></tr>
+
+                    </table>
+                    <div class="col-md-1">
+                        <p>
+                            Acciones :
+                        </p>
+                    </div>
+                    <div class="col-md-5">
+                        <p>
+                            <button class="btn btn-success " >Volver a Manifiestos</button>
+                            <button class="btn btn-danger " >Editar Viaje</button>
+                            <button class="btn btn-info " >Cancelar</button>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">DETALLE DESPACHO </h4>
                 </div>
 
                 <div class="panel-body">
